--- a/app/src/main/res/layout/movie_item.xml
+++ b/app/src/main/res/layout/movie_item.xml
@@ -1,17 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
+    android:layout_width="130dp"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     
-    <TextView
-        android:background="#f00"
-        android:layout_marginTop="8dp"
-        android:layout_marginStart="8dp"
+    <ImageView
+        android:id="@+id/img_cover"
+        android:src="@drawable/movie_4"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Olá mundo"
+        app:layout_constraintStart_toStartOf="parent"
+        android:scaleType="centerCrop"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"/>
+        app:layout_constraintDimensionRatio="9:16"
+        android:layout_height="0dp"
+        android:layout_marginTop="10dp"
+        />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
