--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:background="@color/black"
     tools:context=".MainActivity">
 
@@ -23,10 +23,11 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_main"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
+        android:layout_height="150dp"
         android:background="@color/black"
         app:layout_constraintTop_toBottomOf="@id/txt_title"
         app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginTop="8dp"
         tools:itemCount="5"
         tools:listitem="@layout/movie_item" />
 
