--- a/app/src/main/res/layout/category_item.xml
+++ b/app/src/main/res/layout/category_item.xml
@@ -15,8 +15,8 @@
         android:text="Olá mundo"
         android:textColor="@color/white"
         android:textSize="16dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginStart="12dp"
+        android:layout_marginTop="16dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"/>
 
@@ -24,9 +24,12 @@
         android:id="@+id/rv_category"
         android:layout_width="match_parent"
         android:layout_height="150dp"
+        android:paddingStart="10dp"
+        android:paddingEnd="10dp"
         android:background="@color/black"
         app:layout_constraintTop_toBottomOf="@id/txt_title"
         app:layout_constraintBottom_toBottomOf="parent"
+        android:clipToPadding="false"
         android:layout_marginTop="8dp"
         tools:itemCount="5"
         tools:listitem="@layout/movie_item" />
