--- a/app/src/main/res/layout/activity_movie.xml
+++ b/app/src/main/res/layout/activity_movie.xml
@@ -7,12 +7,21 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MovieActivity">
+    
+    <ImageView
+        android:id="@+id/movie_img"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintDimensionRatio="16:9"
+        android:scaleType="centerCrop"
+        android:src="@drawable/shadows"
+        android:layout_width="match_parent"
+        android:layout_height="0dp" />
 
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/movie_toolbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintTop_toTopOf="parent"
-        android:background="@color/black"/>
+        android:background="@android:color/transparent"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
