--- a/app/src/main/res/layout/activity_movie.xml
+++ b/app/src/main/res/layout/activity_movie.xml
@@ -95,6 +95,7 @@
         android:layout_marginTop="16dp"
         app:layout_constraintTop_toBottomOf="@id/txt_fixed"
         app:layout_constraintBottom_toBottomOf="parent"
+        tools:listitem="@layout/movie_item_similar"
         android:layout_width="match_parent"
         android:layout_height="0dp" />
 
